<resources>
    <string name="app_name">Deview2015</string>
    <string name="facebook_app_id">1636564173257027</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation View-->
    <string name="home">Home</string>
    <string name="all_schedule">All Sessions</string>
    <string name="my_schedule">Favorite Sessions</string>
    <string name="find_friends">Find My Friends</string>
    <string name="deview_story">#Deview2015</string>
    <string name="location">Location</string>
    <string name="account">Login/Logout</string>
    <string name="setting">Setting</string>
    <string name="nav_category2">Account &amp; Setting</string>
    <string name="please_login">Please Login Deview2016</string>
    <string name="logout_msg">Success Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="aboutus">About us</string>
    <string name="title_activity_select_session">SelectSessionActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- DetailSessionFragment -->
    <string name="share_session_dialog_title">Where is sns to share this session?</string>
    <string name="detail_session_activity_title">About Session</string>

    <!-- Setting text -->
    <string name="pref_noti_category">Notifications</string>
    <string name="pref_session_noti">Notify select session start</string>
    <string name="pref_friends_noti">Setting find my friends</string>

    <string name="pref_aboutus_category">About us</string>
    <string name="pref_aboutus">Developers</string>
    <string name="pref_summ_aboutus">Ace Kim - ace.jckim@gmail.com</string>
    <string name="pref_github">Show project repo</string>
    <string name="pref_summ_github">https://github.com/Acegugu/deviewsched-android</string>

    <string name="pref_lawinfo_category">Law Informations</string>
    <string name="pref_opensourcelicense">Opensource Licenses</string>
</resources>
